@@ -1,98 +1,133 @@
 package eu.koolfreedom.command.impl;
 
+import eu.koolfreedom.command.CommandParameters;
+import eu.koolfreedom.command.KoolCommand;
 import eu.koolfreedom.util.FUtil;
+import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
 import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
 import org.bukkit.GameMode;
+import org.bukkit.OfflinePlayer;
 import org.bukkit.command.Command;
-import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
-import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
+import org.bukkit.event.EventHandler;
+import org.bukkit.event.Listener;
+import org.bukkit.event.entity.EntityPotionEffectEvent;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
-import org.jetbrains.annotations.NotNull;
 
 import java.util.*;
 
-public class OrbitCommand implements CommandExecutor, TabCompleter {
-    private static final Map<UUID, Integer> isOrbited = new HashMap<>();
+@CommandParameters(name = "orbit", description = ":trol:", usage = "/<command> <player> <<power> | stop>")
+public class OrbitCommand extends KoolCommand implements Listener
+{
+    private final Map<UUID, Integer> orbitMap = new HashMap<>();
+
+    public OrbitCommand()
+    {
+        super();
+        Bukkit.getPluginManager().registerEvents(this, plugin);
+    }
 
     @Override
-    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        if (args.length == 0) {
-            sender.sendMessage(ChatColor.GRAY + "Usage: /" + label + " <player> [<power> | stop]");
-            return true;
+    public boolean run(CommandSender sender, Player playerSender, Command cmd, String commandLabel, String[] args)
+    {
+        if (args.length == 0)
+        {
+            return false;
         }
 
-        if (!sender.hasPermission("kf.admin")) {
-            sender.sendMessage(ChatColor.RED + "You don't have permission to use this command.");
-            return true;
-        }
-
-        Player target = Bukkit.getPlayer(args[0]);
-        if (target == null) {
-            sender.sendMessage(ChatColor.RED + "Player not found.");
+        OfflinePlayer target = Bukkit.getOfflinePlayer(args[0]);
+        if (!orbitMap.containsKey(target.getUniqueId()) && !target.isOnline())
+        {
+            msg(sender, playerNotFound);
             return true;
         }
 
         int strength = 100;
 
-        if (args.length >= 2) {
-            if (args[1].equalsIgnoreCase("stop")) {
-                stopOrbiting(target);
-                sender.sendMessage(ChatColor.GREEN + "Stopped orbiting " + target.getName() + ".");
-                return true;
-            }
+        if (args.length >= 2)
+        {
+            if (args[1].equalsIgnoreCase("stop"))
+            {
+                orbitMap.remove(target.getUniqueId());
+                if (target instanceof Player player)
+                {
+                    player.setGameMode(GameMode.SURVIVAL);
+                    player.removePotionEffect(PotionEffectType.LEVITATION);
 
-            try {
-                strength = Math.max(1, Math.min(150, Integer.parseInt(args[1])));
-            } catch (NumberFormatException ex) {
-                sender.sendMessage(ChatColor.RED + "Invalid number for strength. Must be between 1 and 150.");
-                return true;
+                    FUtil.staffAction(sender, "Stopped orbiting <player>",
+                            Placeholder.unparsed("player", target.getName()));
+                    return true;
+                }
+            }
+            else
+            {
+                try
+                {
+                    strength = Math.min(Integer.parseInt(args[1]), 1);
+                }
+                catch (NumberFormatException ex)
+                {
+                    msg(sender, "<red>Invalid number: <value>",
+                            Placeholder.unparsed("value", String.valueOf(strength)));
+                    return true;
+                }
             }
         }
 
-        if (isPlayerOrbited(target.getUniqueId())) {
-            sender.sendMessage(ChatColor.RED + target.getName() + " is already orbiting.");
-            return true;
+        orbitMap.put(target.getUniqueId(), strength);
+
+        if (target instanceof Player player)
+        {
+            grantPotionEffects(player);
         }
 
-        startOrbiting(target, strength);
-        FUtil.adminAction(sender.getName(), "Orbiting " + target.getName(), false);
+        FUtil.staffAction(sender, "Started orbiting <player>",
+                Placeholder.unparsed("player", Objects.requireNonNull(target.getName())));
         return true;
     }
 
     @Override
-    public @NotNull List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, @NotNull String[] args) {
-        if (args.length == 1) {
-            List<String> playerNames = new ArrayList<>();
-            for (Player player : Bukkit.getOnlinePlayers()) {
-                playerNames.add(player.getName());
-            }
-            return playerNames;
-        } else if (args.length == 2) {
-            return Arrays.asList("stop", "50", "100", "150");
+    public List<String> tabComplete(CommandSender sender, Command command, String commandLabel, String[] args)
+    {
+        if (args.length == 1)
+        {
+            return Bukkit.getOnlinePlayers().stream().map(Player::getName).toList();
         }
-        return Collections.emptyList();
+        else if (args.length == 2)
+        {
+            List<String> params = new ArrayList<>(List.of("50", "100", "150"));
+
+            if (Bukkit.getOfflinePlayer(args[0]) instanceof Player player && orbitMap.containsKey(player.getUniqueId()))
+            {
+                params.add("stop");
+            }
+
+            return params;
+        }
+
+        return List.of();
     }
 
-    private void startOrbiting(Player player, int strength) {
-        player.setGameMode(GameMode.SURVIVAL);
-        player.addPotionEffect(new PotionEffect(PotionEffectType.LEVITATION, Integer.MAX_VALUE, strength, false, false));
-        isOrbited.put(player.getUniqueId(), strength);
+    @EventHandler
+    public void onEffectRemoval(EntityPotionEffectEvent event)
+    {
+        if (event.getEntity() instanceof Player player && orbitMap.containsKey(player.getUniqueId())
+                && (event.getAction() == EntityPotionEffectEvent.Action.REMOVED || event.getAction() == EntityPotionEffectEvent.Action.CLEARED))
+        {
+            grantPotionEffects(player);
+        }
     }
 
-    private void stopOrbiting(Player player) {
-        player.removePotionEffect(PotionEffectType.LEVITATION);
-        isOrbited.remove(player.getUniqueId());
-    }
+    private void grantPotionEffects(Player player)
+    {
+        if (player.getGameMode() != GameMode.ADVENTURE)
+        {
+            player.setGameMode(GameMode.ADVENTURE);
+        }
 
-    public static boolean isPlayerOrbited(UUID playerId) {
-        return isOrbited.containsKey(playerId);
-    }
-
-    public static Integer getOrbitStrength(UUID playerId) {
-        return isOrbited.get(playerId);
+        player.addPotionEffect(new PotionEffect(PotionEffectType.LEVITATION, Integer.MAX_VALUE,
+                orbitMap.getOrDefault(player.getUniqueId(), 0)));
     }
 }
